--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ nav ul li a {
 /*modifico tamaño de mi nav, cambio color*/
 nav {
     width: 100%;
-    height: 10vh;
+    height: 9vh;
     position: fixed;
     padding-left: 5%;
     padding-right: 5%;
@@ -53,8 +53,22 @@ nav {
 
 
 }
-@media screen and(max-width: 800px) {
-    background-color: rgb;    
+@media  (max-width: 800px) {
+    nav{
+
+        flex-direction: row;
+        height: 15vh;
+
+    }
+}
+@media  (max-width: 400px) {
+    nav{
+
+        flex-direction: row;
+        height: 20vh;
+        align-items: center;
+
+    }
 }
 
 /*digo que este en linea y bloques modificando el espacio*/
@@ -90,14 +104,10 @@ a:hover {
     display: flex;
     justify-content: center;
 }
-@media (max-width:800px) {
-    .reciente {
-        flex-direction: row;
-    }
     
-}
 /*creo cuadrados de 400px con una altura de 400px*/
 .reciente div {
+    display: inline-block;
     background-repeat: no-repeat;
     background-size: cover;
     width: 400px;
@@ -105,7 +115,6 @@ a:hover {
     margin: 20px;
     border-radius: 3px;
     border: solid 1px #000000;
-
 }
 
 /*le agrego fotos al cuadrado*/
@@ -140,6 +149,13 @@ a:hover {
 .destacado{
     display: flex;
     justify-content: center;
+}
+@media (max-width:800px) {
+    .destacado {
+        flex-direction: column;
+        align-items: center;
+    }
+    
 }
 
 .destacado div {
@@ -257,4 +273,36 @@ table {
     justify-content: center;
     align-content: center;
     grid-gap: 50px 20px;
+}
+@media (max-width: 800px){
+    .reciente{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+}
+
+@media (max-width: 800px){
+    .pie{
+        width: 100%;
+        line-height: 50px;
+        background-color: rgb(221, 192, 154);
+        width: 100%;
+    }
+}
+.centro{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.ou{
+background-size: cover;
+background-position: center;
+}
+.od{
+
+}
+.ot{
+
 }
